# charm-mcp-server

./: .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  api_client.py  encounter.py  mcp_server.py  patient_management.py  practice_information.py  pyproject.toml  requirements.txt  telemetry_config.py  tool_metrics.py
src/: mcp_server.py
src/api/: __init__.py  api_client.py
src/common/: __init__.py  filtering.py  utils.py
src/telemetry/: __init__.py  telemetry_config.py  tool_metrics.py
src/tools/: __init__.py  charm_mcp_tools.py  clinical_data.py  clinical_support.py  communication.py  core_tools.py  encounter.py  encounter_management.py  patient_management.py  practice_information.py  scheduling_tools.py  task_management.py
