[project]
name = "charm-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastmcp>2.11.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-distro>=0.57b0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-exporter-prometheus>=0.57b0",
    "prometheus-client>=0.20.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
py-modules = ["mcp_server"]
